# faf_tg_bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  not_run.sh  pyproject.toml  random.sh  restart.sh  run.sh  send.sh  who_play.sh
