[tool.poetry]
name = "faf-tg-bot"
version = "0.1.0"
description = "Telegram bot for faf group"
authors = ["anrlg"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poentry.core.masonry.api"
